# lora-aprs-tracker

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  blackpill_f401cc.overlay.dts  prj.conf
include/aprs/: aprs.h  beacon_logic.h  format.h  packet.h  smart_beacon.h  thread.h
include/gnss/: gnss.h
include/lora/: dev.h  fifo.h  thread.h
src/: gnss.c  main.c
src/aprs/: aprs.c  beacon_logic.c  format.c  packet.c  smart_beacon.c  thread.c
src/lora/: dev.c  fifo.c  thread.c
